# ChangeLog for app-arch/dpkg
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.316 2015/03/04 14:11:03 jer Exp $

*dpkg-1.17.24 (04 Mar 2015)

  04 Mar 2015; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.22.ebuild,
  +dpkg-1.17.24.ebuild:
  Version bump.

  28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for ia64, wrt bug #539648

  27 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for sparc, wrt bug #539648

  26 Feb 2015; Markus Meier <maekke@gentoo.org> dpkg-1.17.23.ebuild:
  arm stable, bug #539648

  25 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for x86, wrt bug #539648

  24 Feb 2015; Mike Frysinger <vapier@gentoo.org> dpkg-1.17.23.ebuild:
  Add mips support.

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for alpha, wrt bug #539648

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for ppc64, wrt bug #539648

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for ppc, wrt bug #539648

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for amd64, wrt bug #539648

  13 Feb 2015; Jeroen Roovers <jer@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for HPPA (bug #539648).

  13 Feb 2015; Jeroen Roovers <jer@gentoo.org> dpkg-1.17.23.ebuild:
  Set sub-SLOT dependency on dev-lang/perl.

*dpkg-1.17.23 (28 Dec 2014)

  28 Dec 2014; Jeroen Roovers <jer@gentoo.org> +dpkg-1.17.23.ebuild:
  Version bump.

  06 Dec 2014; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.10.ebuild,
  metadata.xml:
  Old.

  06 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for ia64, wrt bug #530958

  04 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for ppc64, wrt bug #530958

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild: