@@ -5,14 +5,16 @@ AUX dpkg-1.17.0-gzip-rsyncable.patch 291 SHA256 653215618c3713f0a03efba0d4606e6b
 AUX dpkg-1.17.1-flags.patch 300 SHA256 b0be51022f576bc0867570192ce5871a0da4ca2a66a4e35bafe167d063d84723 SHA512 6dbede2fdde0e28f5e66d77f694a8aabe55b1395ba6a8d26a4808bbe2909cda00946c21a513bbe60b68e76f5669ef08139c72c036f9a16c095e7d702483ed9f4 WHIRLPOOL 66fa84b14d4e26778205c774929c1ef28e3f2ad344af236fecb2a53b1ec409c2a051368febc572f707cc6d18f2b6506d9f662763278b301f0b75fab2dcdaccfa
 DIST dpkg_1.17.23.tar.xz 4386124 SHA256 90c4af92fc248a7542cf6db1141d69b042130abd82781943b3c2608e78f860b5 SHA512 b0ebb6d072135f8eb0504084aab38d1f7366dd2bbf4a28a66f7fda5777236f56eb14dd43f8b5cd5ab8dd5d467e48b398221a271c2cb52360d09c7b7cec0e531a WHIRLPOOL cda6fab0c05e12a077a1c7c66883c85646b9f45ece209925947583a4f452f54750253249e21c2b650c13e57c4bfbb82caf807ab00a9163dd1db4bc289c874a04
 DIST dpkg_1.17.24.tar.xz 4388276 SHA256 afd60233ef090aa5a4d9e181b8986d1f5deb23a3428a2309b6b4ec448d539eac SHA512 4ec8e55f765cd6718f9ea76ac4d0ba37d007a94a06a9ce91a5958feb4641c93dca4b5da8de2e7ddd0775e7e0a00ac3d9f11445489249f724edee6bc9c3a31332 WHIRLPOOL 37113575147e9f8030b0845353596a6e193370cc0b13b785a5a37d08762c27afae857f554ed4da09c4aa1146b6002533f72da7b8ab681ca32292bbc0b83cc3a8
+DIST dpkg_1.17.25.tar.xz 4407792 SHA256 07019d38ae98fb107c79dbb3690cfadff877f153b8c4970e3a30d2e59aa66baa SHA512 6a4b45c0f59cd11fc104d954ab790dd7e11e650cd6dde303a664023a04bf6fbc49c878eaf00e27dd7f9bf5e79a92b3a5f5923d003942436758a3027364a0b7c7 WHIRLPOOL 6ed2d8a645787a83f431803214cce9b1c7516c4083ffe651deb7c2f8b641b85d3a17271030286155a985dfd0046fbd584d2d750ab8954e8e5af74085d7651bd2
 EBUILD dpkg-1.17.23.ebuild 2484 SHA256 657348cdab5985b3d338d40afcde1b8dec71ece450770e1a471fb0d7e364915a SHA512 0bca167fd0ba3d09b001aec150c14087d62b9fddab92f302031355ee0aa21463ed2d19c7785ca94b62562aeb11b0523321761f3f6bda844bb240d05a45a93a5e WHIRLPOOL 527be3d1ec3dc00a46c6ac628cf6892536bde6e082f161c624b3102019fe81f7549cb77c19adcaee903b844fee32894d94d2352cf800086ef741c8c237094c48
 EBUILD dpkg-1.17.24.ebuild 2492 SHA256 4fd8ab3a6c1f8d919f380c498557bbc671f34a2c14bc527768cc9c9f60d40bc9 SHA512 72e86b9df81d41b518ad6bdeb1299be1c2977d96f05015f51deca6b774f6350cf4d308f2a235bf5b144e113a7e251108730859ef7347bb3455e93a88bbafedad WHIRLPOOL 3a32bb725497381e0b0cbcac7542165436051bd4ca4f28c56f9f499812b1719c5f4f5a4ea1db5c380743ad982ab3112d37cb2a06585a84f2b5a9361285d89927
-MISC ChangeLog 40233 SHA256 cab2daf90414ba2643b9d5b5507d6fc8607b164a111ccc025df74c39dfbb2a5e SHA512 5c6b270235fedfb934c957c56a32deb17c118c800882f3f9bdc00e614f144b4cdd9ccf3ba344667b26d2182d73b3fe863ff6a1887b7ffeb31892b279343b71c2 WHIRLPOOL efc71b8e74c5e9bbbb922f48725cace01f7786308bb5bf8524a56ddf172c102a204cb850a7605628423836dd9051ab1a9232cd9ac5675ffae315f35db5a05555
+EBUILD dpkg-1.17.25.ebuild 2492 SHA256 ee66ee658f2f9c5a95b4c2f464cc9196c3c67b5c77eae06606b5a93d9b10ba7c SHA512 8b451e3b39d48515c4bcca7470bb9da384126c1ef65428c6136914eb2bd5b77a917b18f39c7a69d41ed7a1b0dfe5bb86d78c0adf775ba511dad2455408cb049a WHIRLPOOL b3f58b596e893ac71f81907dd5e714c9de354bdd0f9b366765816b4e63fd9be38fb734d9468fd798c490b79f90ed1e1d4fc7bc371a948a673e7b59059733e861
+MISC ChangeLog 40362 SHA256 203a2e24bc09fd7f1a3d2cc28285c68cae09e8d6bff54bb0cc19dfcf3728e17b SHA512 bc3466f216ed041ef55c8a503ffeb1bb80b7fc84318962c6df003ba0967b9f0d33ec57d6c696977b618440cfdad58dc14549067a62368a914934a2d3f0ecd47d WHIRLPOOL 719d89d2337c3af3d214ed63c9f7a5c60732cce03e6a0295b7551ae9ebecd948d8abd2d36a726fc0804071f1ec362cc63b905ceeaf03bd4d54cf08571ad7fe40
 MISC metadata.xml 243 SHA256 43ad915474628453e4f0257b8184ae2628113c0a8519b3a3e038e885c3aec7e3 SHA512 1153fdbd05486ee938a17e51c2f5aade083c05beff04ada67acccf12b4e1bfc04ac662c921452076b81626f0cfc873518b23b69f003d8df8e3d9f3952828da2e WHIRLPOOL f2b1ce108d5c9f22c81fca2079d928cbadb37350f8aeadce236ad273f86892e01346b6b6928eea67af5a3d960ab6b7e42b02c74e97441e9a6bd89cd0c8f340f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT3EngACgkQVWmRsqeSphOtVACfecs45oW/Th8eRlhC+yBJPZX8
-NMMAn0VuU/BKHhKKZUq8cVQoutsLLxxJ
-=+Q1w
+iEYEAREIAAYFAlUoI3EACgkQVWmRsqeSphOuqACZAa21jAdOJLUaEPZsQSA21lSt
+HXMAnjVhImyQhy/XjHGqZd68N9fkKJ/W
+=COT2
 -----END PGP SIGNATURE-----
